assets/css/blog/single.css
.single-header {
    margin-bottom: 4.5rem;
    text-align: center;
}

.single-meta {
    color: var(--secondary-text-color);
    font-size: 1.2rem;
    font-weight: 800;
    margin-bottom: 1rem;
    text-transform: uppercase;
}

.single-meta-item + .single-meta-item::before {
    content: "\02022";
    font-family: serif;
    padding: 0 0.3rem;
}

.single-meta-tag .post-tag {
    color: var(--brand-color);
}

.single-title {
    font-size: 4rem;
    letter-spacing: -0.1rem;
    line-height: 1.2;
}

.single-excerpt {
    font-size: 1.8rem;
    font-style: italic;
    margin-top: 2rem;
}

.single-media {
    margin-bottom: 4.5rem;
}

.single-cta {
    border-bottom: 1px solid var(--light-gray-color);
    border-top: 5px solid var(--brand-color);
    margin-top: 4rem;
    padding: 3rem;
    text-align: center;
}

.single-cta a {
    text-decoration: none !important;
}

.single-cta-title {
    margin: 0 0 3rem !important;
}

.single-cta-button {
    font-weight: 800 !important;
    margin-bottom: 1rem;
}

.single-cta-footer {
    color: var(--darker-gray-color) !important;
    font-size: 1.4rem;
    font-weight: 400 !important;
    letter-spacing: -0.02rem;
}

.single-footer {
    align-items: center;
    display: flex;
    margin-top: 4.5rem;
}

.single-footer-left,
.single-footer-right {
    display: flex;
    flex: 2;
}

.single-footer-right {
    justify-content: flex-end;
}

.single-footer-middle {
    display: flex;
    flex-direction: column;
}

.single-footer-top {
    align-items: center;
    display: flex;
    flex-direction: column;
}

.single-footer-title {
    font-size: 1.8rem;
    margin-bottom: 1rem;
}

.single-footer-bottom {
    margin-top: 2rem;
}

@media (max-width: 767px) {
    .single-header {
        margin-bottom: 3rem;
    }

    .single-title {
        font-size: 2.6rem;
    }

    .single-excerpt {
        font-size: 1.7rem;
    }

    .single-media {
        margin-bottom: 3rem;
    }
}

